@@ -132,6 +132,7 @@ static const argp_option options[] =
     { "hoaf", 'H', "1.1|i|k|l|m|s|t|v", OPTION_ARG_OPTIONAL,
       "Output the automaton in HOA format (default).  Add letters to select "
       "(1.1) version 1.1 of the format, "
+      "(b) create an alias basis if >=2 AP are used, "
       "(i) use implicit labels for complete deterministic automata, "
       "(s) prefer state-based acceptance when possible [default], "
       "(t) force transition-based acceptance, "
